[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DNA-fragment-clustering"
version = "0.1.4"
description = "DNA fragment clustering and grouping tool"
authors = [
    {name = "Jacob Mejlsted"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "python-Levenshtein",
    "distance",
]

[project.urls]
Homepage = "https://github.com/Self-Organizing-Systems-TU-Darmstadt/CTK-ColiToolKit"
Homepage = "https://github.com/JMejlsted/DNA-fragment-clustering"

[project.scripts]
dna-grouper = "dna_fragment_grouper.cli:main"
